--- a/xvideoplayer-controller-tx/src/main/res/values/strings.xml
+++ b/xvideoplayer-controller-tx/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">xvideoplayer-controler</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="preparring">正在准备...</string>
+    <string name="buffering">正在缓冲...</string>
+    <string name="replay">重新播放</string>
+    <string name="share">分享</string>
+    <string name="play_error_retry">播放错误，请重试。</string>
+    <string name="click_retry">点击重试</string>
 </resources>
